MET-3126: Code review changes and starting to fix unit tests