@@ -1,8 +1,11 @@
 package eu.europeana.enrichment.rest.client.enrichment;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
@@ -10,46 +13,57 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import eu.europeana.corelib.definitions.jibx.RDF;
-import eu.europeana.enrichment.api.external.model.EnrichmentBaseWrapper;
+import eu.europeana.enrichment.api.external.model.EnrichmentBase;
 import eu.europeana.enrichment.api.external.model.EnrichmentResultBaseWrapper;
 import eu.europeana.enrichment.api.external.model.EnrichmentResultList;
 import eu.europeana.enrichment.api.external.model.Place;
 import eu.europeana.enrichment.rest.client.exceptions.EnrichmentException;
+import eu.europeana.enrichment.utils.EnrichmentFields;
 import eu.europeana.enrichment.utils.EntityMergeEngine;
 import eu.europeana.enrichment.utils.EntityType;
-import eu.europeana.enrichment.utils.InputValue;
 import eu.europeana.enrichment.api.external.SearchValue;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
+import org.apache.commons.math3.util.Pair;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 
 public class EnricherImplTest {
 
-  private ArgumentCaptor<List<SearchValue>> enrichmentExtractionCaptor = ArgumentCaptor
+  private ArgumentCaptor<List<EnrichmentBase>> enrichmentExtractionCaptor = ArgumentCaptor
       .forClass(List.class);
 
-  private ArgumentCaptor<List<EnrichmentResultBaseWrapper>> enrichmentResultCaptor = ArgumentCaptor
+  private ArgumentCaptor<List<SearchValue>> enrichmentSearchValuesCaptor = ArgumentCaptor
+      .forClass(List.class);
+
+  private ArgumentCaptor<List<EnrichmentBase>> enrichmentResultCaptor = ArgumentCaptor
       .forClass(List.class);
 
   private static final EnrichmentResultList ENRICHMENT_RESULT;
 
-  private static final InputValue[] ENRICHMENT_EXTRACT_RESULT =
-      {new InputValue("orig1", "value1", "lang1", EntityType.AGENT),
-          new InputValue(null, "value2", null, EntityType.AGENT, EntityType.CONCEPT),
-          new InputValue("orig3", null, "lang2")};
+  private static final List<Pair<SearchValue, EnrichmentFields>> ENRICHMENT_EXTRACT_RESULT = new ArrayList<>();
 
   static {
     final Place place1 = new Place();
     place1.setAbout("place1");
     final Place place2 = new Place();
     place2.setAbout("place2");
-    final List<EnrichmentBaseWrapper> enrichmentBaseWrapperList3 = EnrichmentBaseWrapper
-        .createNullOriginalFieldEnrichmentBaseWrapperList(Arrays.asList(place1, null, place2));
-    ENRICHMENT_RESULT = new EnrichmentResultList(enrichmentBaseWrapperList3);
+
+    final List<EnrichmentResultBaseWrapper> enrichmentBaseWrapperList =
+        EnrichmentResultBaseWrapper.createNullOriginalFieldEnrichmentBaseWrapperList(
+            List.of(List.of(place1),Collections.emptyList(), List.of(place2)));
+    ENRICHMENT_RESULT = new EnrichmentResultList(enrichmentBaseWrapperList);
+    ENRICHMENT_EXTRACT_RESULT.add(new Pair<>(new SearchValue("value1", "lang1", EntityType.AGENT),
+        EnrichmentFields.DC_CREATOR));
+    ENRICHMENT_EXTRACT_RESULT.add(
+        new Pair<>(new SearchValue("value2", null, EntityType.AGENT, EntityType.CONCEPT),
+            EnrichmentFields.DC_SUBJECT));
+    ENRICHMENT_EXTRACT_RESULT
+        .add(new Pair<>(new SearchValue("value3", "lang2"), EnrichmentFields.DCTERMS_SPATIAL));
   }
 
   @Test
@@ -60,7 +74,7 @@ public class EnricherImplTest {
 
     // Create enricher.
     final Enricher enricher = spy(new EnricherImpl(entityMergeEngine, enrichmentClient));
-    doReturn(Arrays.asList(ENRICHMENT_EXTRACT_RESULT)).when(enricher)
+    doReturn(ENRICHMENT_EXTRACT_RESULT).when(enricher)
         .extractValuesForEnrichment(any());
     doReturn(Collections.emptyMap()).when(enricher).extractReferencesForEnrichment(any());
 
@@ -98,36 +112,41 @@ public class EnricherImplTest {
     verify(enricher, times(1)).extractValuesForEnrichment(any());
     verify(enricher, times(1)).extractValuesForEnrichment(inputRdf);
 
+
     // Actually enriching
-    verify(enrichmentClient, times(1)).enrich(enrichmentExtractionCaptor.capture());
-    assertArrayEquals(ENRICHMENT_EXTRACT_RESULT, enrichmentExtractionCaptor.getValue().toArray());
+    verify(enrichmentClient, times(1)).enrich(enrichmentSearchValuesCaptor.capture());
+    assertArrayEquals(ENRICHMENT_EXTRACT_RESULT.stream().map(Pair::getFirst).toArray(),
+        enrichmentSearchValuesCaptor.getValue().toArray());
 
 
   }
 
   // Verify merge calls
   private void verifyMergeHappyFlow(EntityMergeEngine entityMergeEngine) {
-    final List<List<EnrichmentResultBaseWrapper>> expectedMerges = new ArrayList<>();
-
-    expectedMerges.add(ENRICHMENT_RESULT.getEnrichmentBaseResultWrapperList());
+    final List<EnrichmentBase> expectedMerges = new ArrayList<>();
+    ENRICHMENT_RESULT.getEnrichmentBaseResultWrapperList()
+        .forEach(list -> expectedMerges.addAll(list.getEnrichmentBaseList()));
 
     verify(entityMergeEngine, times(expectedMerges.size())).mergeEntities(any(),
-        enrichmentResultCaptor.capture(), any());
+        enrichmentExtractionCaptor.capture(), anySet());
     // Note that the captor returns a linked list, so we don't want to use indices.
     // But the interface gives a generic type List, so we don't want to depend on the
     // linked list functionality either.
     int currentPointer = 0;
-    final List<List<EnrichmentResultBaseWrapper>> foundValues = enrichmentResultCaptor.getAllValues()
-        .subList(
-            enrichmentResultCaptor.getAllValues().size() - expectedMerges.size(),
-            enrichmentResultCaptor.getAllValues().size());
-    for (List<EnrichmentResultBaseWrapper> capturedMerge : foundValues) {
-      assertArrayEquals(expectedMerges.get(currentPointer).toArray(), capturedMerge.toArray());
-      currentPointer++;
+    final List<List<EnrichmentBase>> allValues = enrichmentResultCaptor.getAllValues();
+    final List<List<EnrichmentBase>> foundValues = allValues.subList(
+        enrichmentResultCaptor.getAllValues().size() - expectedMerges.size(),
+        enrichmentResultCaptor.getAllValues().size());
+    for (List<EnrichmentBase> capturedMerge : foundValues) {
+      for (EnrichmentBase capturedMergedItem :capturedMerge) {
+        assertSame(expectedMerges.get(currentPointer), capturedMergedItem);
+        currentPointer++;
+      }
     }
   }
 
-  private void verifyEnricherNullFlow(EnrichmentClient enrichmentClient, Enricher enricher, RDF inputRdf) {
+  private void verifyEnricherNullFlow(EnrichmentClient enrichmentClient, Enricher enricher,
+      RDF inputRdf) {
 
     // Extracting values for enrichment
     verify(enricher, times(1)).extractValuesForEnrichment(any());
